2012-08-10  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: changed malloc/free to MagickMalloc/MagickFree.

2012-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ReadJNXImage): Add progress monitor support for
	JNX.

2012-08-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: Image cache is turned off to work-around memory
	overflow.

2012-08-05  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: Fixed.

2012-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c: Add JNX coder for "Garmin proprietary Image
	Format" (implementation by Jaroslav Fojtik) to the build.  Code is
	not yet working properly at this time.

2012-08-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove use of -Wl,-zlazyload under Solaris since
	it seems to decrease the stability of C++ exceptions in x86-64
	build and does not measurably improve runtimes.  Don't force use
	of liblzma because libtiff is used.  User should always have
	control.

2012-07-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/memory.c (MagickMallocAligned): Use RoundUpToAlignment()
	macro to compute aligned pointer.

	* magick/effect.c (EnhanceImage): Eliminate use of ugly Enhance
	macro.  Only filter based on color channels (ignore opacity).

2012-07-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (MAGICK_CACHE_LINE_SIZE): Assume a cache line
	size of 64 bytes except for on PowerPC which uses 128.

	* magick/pixel_cache.c: Use aligned memory allocator to allocate
	structures and buffers which might suffer from false cache line
	sharing

	* magick/memory.c (MagickMallocAligned): Also round up allocation
	size to alignment.

2012-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c, magick/random.c, magick/semaphore.c: Use
	aligned memory allocator to align allocations which should be
	aligned to cache line boundary.

2012-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
